@@ -1,3 +1,18 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.service;
 
 import java.util.ArrayList;
@@ -165,12 +180,12 @@ public class ResourceReference
 
 	public ResourceReference(String location, RelatedArtifact relatedArtifact)
 	{
-		this(location, null, relatedArtifact, null, null, Collections.emptyList());
+		this(location, null, relatedArtifact, null, null, List.of());
 	}
 
 	public ResourceReference(String location, Attachment attachment)
 	{
-		this(location, null, null, attachment, null, Collections.emptyList());
+		this(location, null, null, attachment, null, List.of());
 	}
 
 	@SafeVarargs
