@@ -1,22 +1,33 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.authorization;
 
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Stream;
 
 import org.hl7.fhir.r4.model.CodeSystem;
 import org.hl7.fhir.r4.model.CodeSystem.ConceptDefinitionComponent;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Organization;
-import org.hl7.fhir.r4.model.OrganizationAffiliation;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Resource;
 import org.slf4j.Logger;
@@ -25,7 +36,10 @@ import org.springframework.beans.factory.InitializingBean;
 
 import ca.uhn.fhir.model.api.annotation.ResourceDef;
 import dev.dsf.common.auth.conf.Identity;
+import dev.dsf.common.auth.conf.OrganizationIdentity;
+import dev.dsf.common.auth.conf.PractitionerIdentity;
 import dev.dsf.fhir.authentication.FhirServerRole;
+import dev.dsf.fhir.authentication.FhirServerRoleImpl;
 import dev.dsf.fhir.authentication.OrganizationProvider;
 import dev.dsf.fhir.authorization.read.ReadAccessHelper;
 import dev.dsf.fhir.dao.CodeSystemDao;
@@ -56,6 +70,15 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 	protected final ReadAccessHelper readAccessHelper;
 	protected final ParameterConverter parameterConverter;
 
+	protected final FhirServerRole createRole;
+	protected final FhirServerRole readRole;
+	protected final FhirServerRole updateRole;
+	protected final FhirServerRole deleteRole;
+	protected final FhirServerRole historyRole;
+	protected final FhirServerRole searchRole;
+	protected final FhirServerRole permanentDeleteRole;
+	protected final FhirServerRole websocketRole;
+
 	public AbstractAuthorizationRule(Class<R> resourceType, DaoProvider daoProvider, String serverBase,
 			ReferenceResolver referenceResolver, OrganizationProvider organizationProvider,
 			ReadAccessHelper readAccessHelper, ParameterConverter parameterConverter)
@@ -67,6 +90,15 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 		this.organizationProvider = organizationProvider;
 		this.readAccessHelper = readAccessHelper;
 		this.parameterConverter = parameterConverter;
+
+		createRole = FhirServerRoleImpl.create(resourceType);
+		readRole = FhirServerRoleImpl.read(resourceType);
+		updateRole = FhirServerRoleImpl.update(resourceType);
+		deleteRole = FhirServerRoleImpl.delete(resourceType);
+		historyRole = FhirServerRoleImpl.history(resourceType);
+		searchRole = FhirServerRoleImpl.search(resourceType);
+		permanentDeleteRole = FhirServerRoleImpl.permanentDelete(resourceType);
+		websocketRole = FhirServerRoleImpl.websocket(resourceType);
 	}
 
 	@Override
@@ -130,26 +162,6 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 		}
 	}
 
-	protected List<OrganizationAffiliation> getAffiliations(Connection connection, String organizationIdentifierValue)
-	{
-		if (organizationIdentifierValue == null)
-			return Collections.emptyList();
-
-		try
-		{
-			return daoProvider.getOrganizationAffiliationDao()
-					.readActiveNotDeletedByMemberOrganizationIdentifierIncludingOrganizationIdentifiersWithTransaction(
-							connection, organizationIdentifierValue);
-		}
-		catch (SQLException e)
-		{
-			logger.debug("Error while accessing database", e);
-			logger.warn("Error while accessing database: {} - {}", e.getClass().getName(), e.getMessage());
-
-			throw new RuntimeException(e);
-		}
-	}
-
 	@Override
 	public final Optional<String> reasonUpdateAllowed(Identity identity, R oldResource, R newResource)
 	{
@@ -187,8 +199,7 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 		String iSystem = organizationIdentifier.getSystem();
 		String iValue = organizationIdentifier.getValue();
 
-		Map<String, List<String>> queryParameters = Map.of("identifier",
-				Collections.singletonList(iSystem + "|" + iValue));
+		Map<String, List<String>> queryParameters = Map.of("identifier", List.of(iSystem + "|" + iValue));
 		OrganizationDao dao = daoProvider.getOrganizationDao();
 		SearchQuery<Organization> query = dao.createSearchQueryWithoutUserFilter(PageAndCount.exists())
 				.configureParameters(queryParameters);
@@ -222,7 +233,7 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 		String cCode = coding.getCode();
 
 		Map<String, List<String>> queryParameters = Map.of("url",
-				Collections.singletonList(cSystem + (coding.hasVersion() ? "|" + cVersion : "")));
+				List.of(cSystem + (coding.hasVersion() ? "|" + cVersion : "")));
 		CodeSystemDao dao = daoProvider.getCodeSystemDao();
 		SearchQuery<CodeSystem> query = dao.createSearchQueryWithoutUserFilter(PageAndCount.single())
 				.configureParameters(queryParameters);
@@ -255,21 +266,7 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 				.map(ConceptDefinitionComponent::getCode).anyMatch(c -> c.equals(cCode));
 	}
 
-	protected final boolean isCurrentIdentityPartOfReferencedOrganizations(Connection connection, Identity identity,
-			String referenceLocation, Collection<? extends Reference> references)
-	{
-		return isCurrentIdentityPartOfReferencedOrganizations(connection, identity, referenceLocation,
-				references.stream());
-	}
-
-	protected final boolean isCurrentIdentityPartOfReferencedOrganizations(Connection connection, Identity identity,
-			String referenceLocation, Stream<? extends Reference> references)
-	{
-		return references.anyMatch(
-				r -> isCurrentIdentityPartOfReferencedOrganization(connection, identity, referenceLocation, r));
-	}
-
-	protected final boolean isCurrentIdentityPartOfReferencedOrganization(Connection connection, Identity identity,
+	protected boolean isCurrentIdentityPartOfReferencedOrganization(Connection connection, Identity identity,
 			String referenceLocation, Reference reference)
 	{
 		if (reference == null)
@@ -291,7 +288,7 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 				return false;
 			}
 
-			Optional<Resource> resource = referenceResolver.resolveReference(identity, resReference, connection);
+			Optional<Resource> resource = referenceResolver.resolveReference(resReference, connection);
 			if (resource.isPresent() && resource.get() instanceof Organization)
 			{
 				// ignoring updates (version changes) to the organization id
@@ -312,15 +309,6 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 				return false;
 			}
 		}
-	}
-
-	protected final boolean isLocalOrganization(Organization organization)
-	{
-		if (organization == null || !organization.hasIdElement())
-			return false;
-
-		return organizationProvider.getLocalOrganization()
-				.map(localOrg -> localOrg.getIdElement().equals(organization.getIdElement())).orElse(false);
 	}
 
 	@SafeVarargs
@@ -354,16 +342,16 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 	@Override
 	public final Optional<String> reasonSearchAllowed(Identity identity)
 	{
-		if (identity.hasDsfRole(FhirServerRole.SEARCH))
+		if (identity.hasDsfRole(searchRole))
 		{
 			logger.info("Search of {} authorized for identity '{}'", getResourceTypeName(), identity.getName());
 
-			return Optional.of("Identity has role " + FhirServerRole.SEARCH);
+			return Optional.of("Identity has role " + searchRole);
 		}
 		else
 		{
 			logger.warn("Search of {} unauthorized for identity '{}', no role {}", getResourceTypeName(),
-					identity.getName(), FhirServerRole.SEARCH);
+					identity.getName(), searchRole);
 
 			return Optional.empty();
 		}
@@ -372,16 +360,16 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 	@Override
 	public final Optional<String> reasonHistoryAllowed(Identity identity)
 	{
-		if (identity.hasDsfRole(FhirServerRole.HISTORY))
+		if (identity.hasDsfRole(historyRole))
 		{
 			logger.info("History of {} authorized for identity '{}'", getResourceTypeName(), identity.getName());
 
-			return Optional.of("Identity has role " + FhirServerRole.HISTORY);
+			return Optional.of("Identity has role " + historyRole);
 		}
 		else
 		{
 			logger.warn("History of {} unauthorized for identity '{}', no role {}", getResourceTypeName(),
-					identity.getName(), FhirServerRole.HISTORY);
+					identity.getName(), historyRole);
 
 			return Optional.empty();
 		}
@@ -393,22 +381,65 @@ public abstract class AbstractAuthorizationRule<R extends Resource, D extends Re
 		final String resourceId = oldResource.getIdElement().getIdPart();
 		final long resourceVersion = oldResource.getIdElement().getVersionIdPartAsLong();
 
-		if (identity.isLocalIdentity() && identity.hasDsfRole(FhirServerRole.PERMANENT_DELETE)
+		if (identity.isLocalIdentity() && identity.hasDsfRole(permanentDeleteRole)
 				&& reasonDeleteAllowed(connection, identity, oldResource).isPresent())
 		{
 			logger.info("Permanent delete of {}/{}/_history/{} authorized for identity '{}'", getResourceTypeName(),
 					resourceId, resourceVersion, identity.getName());
 
-			return Optional.of("Identity is local identity and has role " + FhirServerRole.PERMANENT_DELETE);
+			return Optional.of("Identity is local identity and has role " + permanentDeleteRole);
 		}
 		else
 		{
 			logger.warn(
 					"Permanent delete of {}/{}/_history/{} unauthorized for identity '{}', not a local identity or no role {}",
-					getResourceTypeName(), resourceId, resourceVersion, identity.getName(),
-					FhirServerRole.PERMANENT_DELETE);
+					getResourceTypeName(), resourceId, resourceVersion, identity.getName(), permanentDeleteRole);
 
 			return Optional.empty();
 		}
+	}
+
+	@Override
+	public Optional<String> reasonWebsocketAllowed(Identity identity, R existingResource)
+	{
+		try (Connection connection = daoProvider.newReadOnlyAutoCommitTransaction())
+		{
+			return reasonWebsocketAllowed(connection, identity, existingResource);
+		}
+		catch (SQLException e)
+		{
+			logger.debug("Error while accessing database", e);
+			logger.warn("Error while accessing database: {} - {}", e.getClass().getName(), e.getMessage());
+
+			throw new RuntimeException(e);
+		}
+	}
+
+	private Optional<String> reasonWebsocketAllowed(Connection connection, Identity identity, R existingResource)
+	{
+		final String resourceId = existingResource.getIdElement().getIdPart();
+		final long resourceVersion = existingResource.getIdElement().getVersionIdPartAsLong();
+
+		if (identity.isLocalIdentity() && identity.hasDsfRole(websocketRole))
+		{
+			logger.info("Websocket access to {}/{}/_history/{} authorized for local identity '{}'",
+					getResourceTypeName(), resourceId, resourceVersion, identity.getName());
+
+			return Optional.of("Identity has role " + websocketRole);
+		}
+		else
+		{
+			logger.warn(
+					"Websocket access to {}/{}/_history/{} unauthorized for identity '{}', not a local identity or no role {}",
+					getResourceTypeName(), resourceId, resourceVersion, identity.getName(), websocketRole);
+
+			return Optional.empty();
+		}
+	}
+
+	protected final boolean isLocalOrganizationOrDsfAdmin(Identity identity)
+	{
+		return identity.isLocalIdentity() && (identity instanceof OrganizationIdentity
+				|| (identity instanceof PractitionerIdentity p && p.hasPractionerRole("DSF_ADMIN")));
 	}
 }
