@@ -1,9 +1,23 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.authorization;
 
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.regex.Pattern;
@@ -108,7 +122,7 @@ public class OrganizationAuthorizationRule extends AbstractMetaTagAuthorizationR
 				.findFirst().orElseThrow();
 
 		return (newResource.getMeta().hasProfile(DSF_ORGANIZATION)
-				&& resourceExistsWithThumbprint(connection, newResource, Collections.emptyList()))
+				&& resourceExistsWithThumbprint(connection, newResource, List.of()))
 				|| organizationWithIdentifierExists(connection, organizationIdentifier);
 	}
 
