@@ -1,9 +1,23 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.subscription;
 
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -161,8 +175,8 @@ public class WebSocketSubscriptionManagerImpl
 					}
 					else
 					{
-						matchers.put(matcher.get().getResourceType(), new ArrayList<>(
-								Collections.singletonList(new SubscriptionAndMatcher(subscription, matcher.get()))));
+						matchers.put(matcher.get().getResourceType(),
+								new ArrayList<>(List.of(new SubscriptionAndMatcher(subscription, matcher.get()))));
 					}
 				}
 			}
@@ -279,7 +293,7 @@ public class WebSocketSubscriptionManagerImpl
 
 		// defensive copy because list could be changed by other threads while we are reading
 		List<SessionIdAndRemoteAsync> remotes = new ArrayList<>(optRemotes.get());
-		remotes.stream().filter(r -> userHasReadAccess(r, event)).forEach(r -> send(r, text));
+		remotes.stream().filter(r -> userHasReadAndWebsocketAccess(r, event)).forEach(r -> send(r, text));
 	}
 
 	private IParser newXmlParser()
@@ -299,7 +313,7 @@ public class WebSocketSubscriptionManagerImpl
 		return p;
 	}
 
-	private boolean userHasReadAccess(SessionIdAndRemoteAsync sessionAndRemote, Event event)
+	private boolean userHasReadAndWebsocketAccess(SessionIdAndRemoteAsync sessionAndRemote, Event event)
 	{
 		Optional<AuthorizationRule<?>> optRule = authorizationRuleProvider
 				.getAuthorizationRule(event.getResourceType());
@@ -307,18 +321,23 @@ public class WebSocketSubscriptionManagerImpl
 		{
 			@SuppressWarnings("unchecked")
 			AuthorizationRule<Resource> rule = (AuthorizationRule<Resource>) optRule.get();
-			Optional<String> optReason = rule.reasonReadAllowed(sessionAndRemote.identity, event.getResource());
+			Optional<String> readAllowedReason = rule.reasonReadAllowed(sessionAndRemote.identity, event.getResource());
+			Optional<String> websocketAllowedReason = rule.reasonWebsocketAllowed(sessionAndRemote.identity,
+					event.getResource());
 
-			if (optReason.isPresent())
+			if (readAllowedReason.isPresent() && websocketAllowedReason.isPresent())
 			{
-				logger.info("Sending event {} to user {}, read of {} allowed {}", event.getClass().getSimpleName(),
-						sessionAndRemote.identity.getName(), event.getResourceType().getSimpleName(), optReason.get());
+				logger.info("Sending event {} to user {}, websocket access and read of {} allowed {}, {}",
+						event.getClass().getSimpleName(), sessionAndRemote.identity.getName(),
+						event.getResourceType().getSimpleName(), websocketAllowedReason.get(),
+						readAllowedReason.isPresent());
 				return true;
 			}
 			else
 			{
-				logger.warn("Skipping event {} for user {}, read of {} not allowed", event.getClass().getSimpleName(),
-						sessionAndRemote.identity.getName(), event.getResourceType().getSimpleName());
+				logger.warn("Skipping event {} for user {}, websocket access or read of {} not allowed",
+						event.getClass().getSimpleName(), sessionAndRemote.identity.getName(),
+						event.getResourceType().getSimpleName());
 				return false;
 			}
 		}
