@@ -1,5 +1,21 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.integration;
 
+import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
@@ -11,8 +27,8 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
@@ -36,6 +52,8 @@ import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.ResearchStudy;
 import org.hl7.fhir.r4.model.ResearchStudy.ResearchStudyStatus;
 import org.junit.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import dev.dsf.fhir.dao.BinaryDao;
 import dev.dsf.fhir.dao.DocumentReferenceDao;
@@ -43,12 +61,15 @@ import dev.dsf.fhir.dao.OrganizationDao;
 import dev.dsf.fhir.dao.PatientDao;
 import dev.dsf.fhir.dao.ResearchStudyDao;
 import dev.dsf.fhir.dao.exception.ResourceDeletedException;
+import dev.dsf.fhir.integration.random.RandomInputStream;
 import dev.dsf.fhir.search.PageAndCount;
 import dev.dsf.fhir.search.PartialResult;
 import jakarta.ws.rs.core.MediaType;
 
 public class BinaryIntegrationTest extends AbstractIntegrationTest
 {
+	private static final Logger logger = LoggerFactory.getLogger(BinaryIntegrationTest.class);
+
 	@Test
 	public void testReadAllowedLocalUser() throws Exception
 	{
@@ -64,6 +85,23 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		Binary created = binDao.create(binary);
 
 		getWebserviceClient().read(Binary.class, created.getIdElement().getIdPart());
+	}
+
+	@Test
+	public void testReadHeadAllowedLocalUser() throws Exception
+	{
+		final String contentType = MediaType.TEXT_PLAIN;
+		final byte[] data = "Hello World".getBytes(StandardCharsets.UTF_8);
+
+		Binary binary = new Binary();
+		binary.setContentType(contentType);
+		binary.setData(data);
+		getReadAccessHelper().addLocal(binary);
+
+		BinaryDao binDao = getSpringWebApplicationContext().getBean(BinaryDao.class);
+		Binary created = binDao.create(binary);
+
+		assertTrue(getWebserviceClient().exists(Binary.class, created.getIdElement().getIdPart()));
 	}
 
 	@Test
@@ -208,7 +246,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 
 		expectNotAcceptable(() ->
 		{
-			try (InputStream in = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
+			try (InputStream _ = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
 					MediaType.APPLICATION_XML_TYPE))
 			{
 			}
@@ -225,7 +263,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -268,7 +306,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -305,7 +343,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -343,7 +381,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("Test Organization"))));
+						.configureParameters(Map.of("name", List.of("Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -402,7 +440,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -494,7 +532,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -723,7 +761,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 	public void testSearchAllowedLocalUserNotFound() throws Exception
 	{
 		Bundle resultBundle = getWebserviceClient().search(Binary.class,
-				Map.of("_id", Collections.singletonList(UUID.randomUUID().toString())));
+				Map.of("_id", List.of(UUID.randomUUID().toString())));
 
 		assertNotNull(resultBundle);
 		assertEquals(0, resultBundle.getTotal());
@@ -1017,7 +1055,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -1103,7 +1141,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		OrganizationDao orgDao = getSpringWebApplicationContext().getBean(OrganizationDao.class);
 		PartialResult<Organization> result = orgDao
 				.search(orgDao.createSearchQueryWithoutUserFilter(PageAndCount.single())
-						.configureParameters(Map.of("name", Arrays.asList("External Test Organization"))));
+						.configureParameters(Map.of("name", List.of("External Test Organization"))));
 		assertNotNull(result);
 		assertEquals(1, result.getTotal());
 		assertNotNull(result.getPartialResult());
@@ -1257,7 +1295,8 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 
 		assertNotNull(created.getContentType());
 		assertEquals(contentType, created.getContentType());
-		assertTrue(Arrays.equals(data, created.getData()));
+		assertArrayEquals("'" + new String(data, StandardCharsets.UTF_8) + "' vs. '"
+				+ new String(created.getData(), StandardCharsets.UTF_8) + "'", data, created.getData());
 	}
 
 	@Test
@@ -1322,7 +1361,8 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 
 		assertNotNull(created.getContentType());
 		assertEquals(contentType, created.getContentType());
-		assertTrue(Arrays.equals(data, created.getData()));
+		assertArrayEquals("'" + new String(data, StandardCharsets.UTF_8) + "' vs. '"
+				+ new String(created.getData(), StandardCharsets.UTF_8) + "'", data, created.getData());
 
 		assertNotNull(created.getSecurityContext());
 		assertEquals(createdRs.getIdElement().toVersionless(), created.getSecurityContext().getReferenceElement());
@@ -2359,7 +2399,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		b3 = binaryDao.create(b3);
 		b4 = binaryDao.create(b4);
 
-		Bundle searchBundle = getWebserviceClient().search(Binary.class, Collections.emptyMap());
+		Bundle searchBundle = getWebserviceClient().search(Binary.class, Map.of());
 		assertNotNull(searchBundle);
 		assertEquals(4, searchBundle.getTotal());
 		assertTrue(searchBundle.getEntry().stream()
@@ -2368,8 +2408,8 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		String actualIds = searchBundle.getEntry().stream().map(BundleEntryComponent::getResource)
 				.map(r -> "Binary/" + r.getIdElement().getIdPart() + "/_history/" + r.getMeta().getVersionId()).sorted()
 				.collect(Collectors.joining(", "));
-		String expectedIds = Arrays.asList(b1, b2, b3, b4).stream().map(b -> b.getIdElement().getValueAsString())
-				.sorted().collect(Collectors.joining(", "));
+		String expectedIds = List.of(b1, b2, b3, b4).stream().map(b -> b.getIdElement().getValueAsString()).sorted()
+				.collect(Collectors.joining(", "));
 		assertEquals(expectedIds, actualIds);
 	}
 
@@ -2428,7 +2468,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		b4 = binaryDao.create(b4);
 		b5 = binaryDao.create(b5);
 
-		Bundle searchBundle = getExternalWebserviceClient().search(Binary.class, Collections.emptyMap());
+		Bundle searchBundle = getExternalWebserviceClient().search(Binary.class, Map.of());
 		assertNotNull(searchBundle);
 		assertEquals(3, searchBundle.getTotal());
 		assertTrue(searchBundle.getEntry().stream()
@@ -2437,7 +2477,7 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 		String actualIds = searchBundle.getEntry().stream().map(BundleEntryComponent::getResource)
 				.map(r -> "Binary/" + r.getIdElement().getIdPart() + "/_history/" + r.getMeta().getVersionId()).sorted()
 				.collect(Collectors.joining(", "));
-		String expectedIds = Arrays.asList(b2, b3, b5).stream().map(b -> b.getIdElement().getValueAsString()).sorted()
+		String expectedIds = List.of(b2, b3, b5).stream().map(b -> b.getIdElement().getValueAsString()).sorted()
 				.collect(Collectors.joining(", "));
 		assertEquals(expectedIds, actualIds);
 	}
@@ -2889,17 +2929,166 @@ public class BinaryIntegrationTest extends AbstractIntegrationTest
 	}
 
 	@Test
-	public void testCreateLargeBinaryDirect() throws Exception
+	public void testCreate8MiB() throws Exception
 	{
 		PatientDao dao = getSpringWebApplicationContext().getBean(PatientDao.class);
-		Patient p = new Patient();
-		getReadAccessHelper().addAll(p);
-		Patient created = dao.create(p);
+		Patient patient = new Patient();
+		getReadAccessHelper().addAll(patient);
+		Patient createdPatient = dao.create(patient);
 
 		byte[] data = new byte[1024 * 1024 * 8]; // 8 MiB
-		String securityContext = "Patient/" + created.getIdElement().getIdPart();
+		String securityContext = "Patient/" + createdPatient.getIdElement().getIdPart();
 
-		getWebserviceClient().createBinary(new ByteArrayInputStream(data), MediaType.APPLICATION_OCTET_STREAM_TYPE,
-				securityContext);
+		Binary created = getWebserviceClient().createBinary(new ByteArrayInputStream(data),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, securityContext);
+
+		assertNotNull(created);
+		assertNotNull(created.getData());
+		assertEquals(data.length, created.getData().length);
+	}
+
+	@Test
+	public void testCreateReadDelete4GiB() throws Exception
+	{
+		long payloadSize = RandomInputStream.ONE_GIBIBYTE * 4;
+
+		logger.info(
+				"Executing create / read test for binary with {} GiB payload, test will run for about 2 minutes ...",
+				(payloadSize / RandomInputStream.ONE_GIBIBYTE));
+
+		PatientDao dao = getSpringWebApplicationContext().getBean(PatientDao.class);
+		Patient patient = new Patient();
+		getReadAccessHelper().addAll(patient);
+		Patient createdPatient = dao.create(patient);
+
+		String securityContext = "Patient/" + createdPatient.getIdElement().getIdPart();
+		IdType created = getWebserviceClient().withMinimalReturn().createBinary(RandomInputStream.zeros(payloadSize),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, securityContext);
+		assertNotNull(created);
+
+		long t0h = System.currentTimeMillis();
+		assertTrue(getWebserviceClient().exists(Binary.class, created.getIdPart(), created.getVersionIdPart()));
+		long t1h = System.currentTimeMillis();
+
+		long headExecTime = t1h - t0h;
+		logger.info("HTTP HEAD call finished in {} ms", headExecTime);
+		assertTrue("HTTP HEAD call took longer then 200 ms, (" + headExecTime + ")", headExecTime < 200);
+
+		long t0g = System.currentTimeMillis();
+		InputStream in = getWebserviceClient().readBinary(created.getIdPart(), created.getVersionIdPart(),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE);
+
+		assertNotNull(in);
+
+		try (in)
+		{
+			byte[] buffer = new byte[8192 * 100];
+			int n;
+			long readSize = 0;
+			while ((n = in.read(buffer)) != -1)
+				readSize += n;
+
+			assertEquals(payloadSize, readSize);
+		}
+		long t1g = System.currentTimeMillis();
+
+		logger.info("HTTP GET call finished in {} ms", (t1g - t0g));
+
+		long t0d = System.currentTimeMillis();
+		getWebserviceClient().delete(Binary.class, created.getIdPart());
+		long t1d = System.currentTimeMillis();
+
+		long deleteExecTime = t1d - t0d;
+		logger.info("HTTP DELETE call finished in {} ms", deleteExecTime);
+		assertTrue("HTTP DELETE call took longer then 200 ms, (" + deleteExecTime + ")", deleteExecTime < 200);
+
+		long t0pd = System.currentTimeMillis();
+		getWebserviceClient().deletePermanently(Binary.class, created.getIdPart());
+		long t1pd = System.currentTimeMillis();
+
+		logger.info("Permanent delete call finished in {} ms", (t1pd - t0pd));
+
+		// wait for binaries_lo_unlink_queue delete to finish
+		Thread.sleep(Duration.ofSeconds(2));
+	}
+
+	@Test
+	public void testCreateViaTransactionBundleExpectRollback() throws Exception
+	{
+		final String contentType = MediaType.TEXT_PLAIN;
+		final byte[] data = "Hello World".getBytes(StandardCharsets.UTF_8);
+
+		Binary binary = new Binary();
+		binary.setContentType(contentType);
+		binary.setData(data);
+		getReadAccessHelper().addLocal(binary);
+
+		Organization organization = new Organization();
+		getReadAccessHelper().addLocal(organization);
+
+		Bundle bundle = new Bundle();
+		bundle.setType(BundleType.TRANSACTION);
+		bundle.addEntry().setFullUrl("urn:uuid:" + UUID.randomUUID().toString()).setResource(binary).getRequest()
+				.setMethod(HTTPVerb.POST).setUrl("Binary");
+		bundle.addEntry().setFullUrl("urn:uuid:" + UUID.randomUUID().toString()).setResource(organization).getRequest()
+				.setMethod(HTTPVerb.POST).setUrl("Organization");
+
+		expectForbidden(() -> getWebserviceClient().postBundle(bundle));
+	}
+
+	@Test
+	public void testCreateReadRange() throws Exception
+	{
+		PatientDao dao = getSpringWebApplicationContext().getBean(PatientDao.class);
+		Patient patient = new Patient();
+		getReadAccessHelper().addAll(patient);
+		Patient createdPatient = dao.create(patient);
+
+		byte[] data = new byte[] { 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 };
+		String securityContext = "Patient/" + createdPatient.getIdElement().getIdPart();
+
+		Binary created = getWebserviceClient().createBinary(new ByteArrayInputStream(data),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, securityContext);
+
+		assertNotNull(created);
+		assertNotNull(created.getData());
+		assertEquals(data.length, created.getData().length);
+
+		InputStream readAllIn = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, null, null);
+		byte[] readAll = readAllIn.readAllBytes();
+		assertEquals(data.length, readAll.length);
+
+		InputStream read01In = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, 0L, 1L);
+		byte[] read01 = read01In.readAllBytes();
+		assertEquals(2, read01.length);
+		assertEquals(0, read01[0]);
+		assertEquals(1, read01[1]);
+
+		InputStream read23In = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, 2L, 3L);
+		byte[] read23 = read23In.readAllBytes();
+		assertEquals(2, read23.length);
+		assertEquals(2, read23[0]);
+		assertEquals(3, read23[1]);
+
+		InputStream readFrom4In = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, 4L, null);
+		byte[] readFrom4 = readFrom4In.readAllBytes();
+		assertEquals(6, readFrom4.length);
+		assertEquals(4, readFrom4[0]);
+		assertEquals(5, readFrom4[1]);
+		assertEquals(6, readFrom4[2]);
+		assertEquals(7, readFrom4[3]);
+		assertEquals(8, readFrom4[4]);
+		assertEquals(9, readFrom4[5]);
+
+		InputStream readLast2In = getWebserviceClient().readBinary(created.getIdElement().getIdPart(),
+				MediaType.APPLICATION_OCTET_STREAM_TYPE, null, -2L);
+		byte[] readLast2 = readLast2In.readAllBytes();
+		assertEquals(2, readLast2.length);
+		assertEquals(8, readLast2[0]);
+		assertEquals(9, readLast2[1]);
 	}
 }
