@@ -1,10 +1,25 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.integration;
 
 import static junit.framework.TestCase.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import org.hl7.fhir.r4.model.Bundle;
@@ -18,7 +33,7 @@ public class QuestionnaireIntegrationTest extends AbstractQuestionnaireIntegrati
 	@Test
 	public void testCreateValidByLocalUser()
 	{
-		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		Questionnaire questionnaire = createQuestionnaire();
 		Questionnaire created = getWebserviceClient().create(questionnaire);
 
 		assertNotNull(created);
@@ -29,12 +44,12 @@ public class QuestionnaireIntegrationTest extends AbstractQuestionnaireIntegrati
 	@Test
 	public void testSearchByDate() throws Exception
 	{
-		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		Questionnaire questionnaire = createQuestionnaire();
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 		questionnaireDao.create(questionnaire);
 
 		Bundle searchBundle = getWebserviceClient().search(Questionnaire.class,
-				Map.of("date", Collections.singletonList("le2022-02-01")));
+				Map.of("date", List.of("le2022-02-01")));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(1, searchBundle.getEntry().size());
@@ -50,12 +65,12 @@ public class QuestionnaireIntegrationTest extends AbstractQuestionnaireIntegrati
 	@Test
 	public void testSearchByIdentifier() throws Exception
 	{
-		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		Questionnaire questionnaire = createQuestionnaire();
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 		questionnaireDao.create(questionnaire);
 
 		Bundle searchBundle = getWebserviceClient().search(Questionnaire.class,
-				Map.of("identifier", Collections.singletonList(TEST_IDENTIFIER_SYSTEM + "|" + TEST_IDENTIFIER_VALUE)));
+				Map.of("identifier", List.of(TEST_IDENTIFIER_SYSTEM + "|" + TEST_IDENTIFIER_VALUE)));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(1, searchBundle.getEntry().size());
@@ -72,12 +87,12 @@ public class QuestionnaireIntegrationTest extends AbstractQuestionnaireIntegrati
 	@Test
 	public void testSearchByStatus() throws Exception
 	{
-		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		Questionnaire questionnaire = createQuestionnaire();
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 		questionnaireDao.create(questionnaire);
 
 		Bundle searchBundle = getWebserviceClient().search(Questionnaire.class,
-				Map.of("status", Collections.singletonList(QUESTIONNAIRE_STATUS.toCode())));
+				Map.of("status", List.of(QUESTIONNAIRE_STATUS.toCode())));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(1, searchBundle.getEntry().size());
@@ -93,13 +108,12 @@ public class QuestionnaireIntegrationTest extends AbstractQuestionnaireIntegrati
 	@Test
 	public void testSearchByUrlAndVersion() throws Exception
 	{
-		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		Questionnaire questionnaire = createQuestionnaire();
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 		questionnaireDao.create(questionnaire);
 
 		Bundle searchBundle = getWebserviceClient().search(Questionnaire.class,
-				Map.of("url", Collections.singletonList(QUESTIONNAIRE_URL), "version",
-						Collections.singletonList(QUESTIONNAIRE_VERSION)));
+				Map.of("url", List.of(QUESTIONNAIRE_URL), "version", List.of(QUESTIONNAIRE_VERSION)));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(1, searchBundle.getEntry().size());
