@@ -1,11 +1,25 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.profiles;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
-import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Organization;
 import org.hl7.fhir.r4.model.StringType;
@@ -20,41 +34,56 @@ import dev.dsf.fhir.validation.ResourceValidator;
 import dev.dsf.fhir.validation.ResourceValidatorImpl;
 import dev.dsf.fhir.validation.ValidationSupportRule;
 
-public class OrganizationProfileTest
+public class OrganizationProfileTest extends AbstractMetaTagProfileTest<Organization>
 {
 	private static final Logger logger = LoggerFactory.getLogger(OrganizationProfileTest.class);
 
 	@ClassRule
 	public static final ValidationSupportRule validationRule = new ValidationSupportRule(
-			Arrays.asList("dsf-organization-1.0.0.xml", "dsf-organization-parent-1.0.0.xml",
-					"dsf-extension-certificate-thumbprint-1.0.0.xml", "dsf-endpoint-1.0.0.xml",
-					"dsf-extension-read-access-parent-organization-role-1.0.0.xml",
-					"dsf-extension-read-access-organization-1.0.0.xml"),
-			Arrays.asList("dsf-read-access-tag-1.0.0.xml"), Arrays.asList("dsf-read-access-tag-1.0.0.xml"));
+			List.of("dsf-extension-read-access-organization-2.0.0.xml",
+					"dsf-extension-read-access-parent-organization-role-2.0.0.xml", "dsf-meta-2.0.0.xml",
+					"dsf-extension-certificate-thumbprint-2.0.0.xml", "dsf-organization-2.0.0.xml",
+					"dsf-organization-parent-2.0.0.xml", "dsf-endpoint-2.0.0.xml"),
+			List.of("dsf-read-access-tag-2.0.0.xml", "dsf-organization-role-2.0.0.xml"),
+			List.of("dsf-read-access-tag-2.0.0.xml", "dsf-organization-role-2.0.0.xml"));
 
 	private final ResourceValidator resourceValidator = new ResourceValidatorImpl(validationRule.getFhirContext(),
 			validationRule.getValidationSupport());
 
-	@Test
-	public void testOrganizationProfileValid() throws Exception
+	@Override
+	protected Organization create()
 	{
-		Organization org = new Organization();
-		org.getMeta().addProfile("http://dsf.dev/fhir/StructureDefinition/organization");
-		Coding tag = org.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag")
-				.setCode("ORGANIZATION");
-		tag.addExtension("http://dsf.dev/fhir/StructureDefinition/extension-read-access-organization",
-				new Identifier().setSystem("http://dsf.dev/sid/organization-identifier").setValue("organization.com"));
-		org.addIdentifier().setSystem("http://dsf.dev/sid/organization-identifier").setValue("test.org");
-		org.setActive(true);
-		org.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
-		org.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
-		org.addExtension().setUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint")
+		Organization o = new Organization();
+		o.getMeta().addProfile("http://dsf.dev/fhir/StructureDefinition/organization");
+		o.addIdentifier().setSystem("http://dsf.dev/sid/organization-identifier").setValue("test.org");
+		o.setActive(true);
+		o.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
+		o.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
+		o.addExtension().setUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint")
 				.setValue(new StringType(
 						"6d40e7c82ead96a9c5851976002d3732631d6e0e82e10e98c5ba568b2980b45a4436577d329ee47a8bc50fd35e39aa3c54faa23249d7b7a82a117824a4c430eb"));
 
-		ValidationResult result = resourceValidator.validate(org);
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::info);
+		return o;
+	}
+
+	@Test
+	public void runMetaTagTests() throws Exception
+	{
+		doRunMetaTagTests(resourceValidator);
+	}
+
+	@Test
+	public void testOrganizationProfileValid() throws Exception
+	{
+		Organization o = create();
+		o.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("LOCAL");
+		o.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ORGANIZATION")
+				.addExtension("http://dsf.dev/fhir/StructureDefinition/extension-read-access-organization",
+						new Identifier().setSystem("http://dsf.dev/sid/organization-identifier")
+								.setValue("organization.com"));
+
+		ValidationResult result = resourceValidator.validate(o);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertEquals(0, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
 				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
@@ -70,10 +99,37 @@ public class OrganizationProfileTest
 		org.setActive(true);
 
 		ValidationResult result = resourceValidator.validate(org);
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::info);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertEquals(0, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
+				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
+	}
+
+	@Test
+	public void testOrganizationProfileHexNotValid() throws Exception
+	{
+		Organization org = new Organization();
+		org.getMeta().addProfile("http://dsf.dev/fhir/StructureDefinition/organization");
+		org.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("LOCAL");
+		org.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ORGANIZATION")
+				.addExtension("http://dsf.dev/fhir/StructureDefinition/extension-read-access-organization",
+						new Identifier().setSystem("http://dsf.dev/sid/organization-identifier")
+								.setValue("organization.com"));
+		org.addIdentifier().setSystem("http://dsf.dev/sid/organization-identifier").setValue("test.org");
+		org.setActive(true);
+		org.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
+		org.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
+		org.addExtension().setUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint")
+				.setValue(new StringType(
+						"6d40e7c82ead96a9c5851976002d3732631d6e0e82e10e98c5ba568b2980b45a4436577d329ee47a8bc50fd35e39aa3c54faa23249d7b7a_Wrong_Characters"));
+		org.addExtension().setUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint")
+				.setValue(new StringType(
+						"6d40e7c82ead96a9c5851976002d3732631d6e0e82e10e98c5ba568b2980b45a4436577d329ee47a8bc50fd35e39aa3c54faa23249d7b7a82a117824a4c430ebTooLong"));
+
+		ValidationResult result = resourceValidator.validate(org);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
+
+		assertEquals(2, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
 				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
 	}
 
@@ -82,10 +138,11 @@ public class OrganizationProfileTest
 	{
 		Organization org = new Organization();
 		org.getMeta().addProfile("http://dsf.dev/fhir/StructureDefinition/organization");
-		Coding tag = org.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag")
-				.setCode("ORGANIZATION");
-		tag.addExtension("http://dsf.dev/fhir/StructureDefinition/extension-read-access-organization",
-				new Identifier().setSystem("http://dsf.dev/sid/organization-identifier").setValue("organization.com"));
+		org.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("LOCAL");
+		org.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ORGANIZATION")
+				.addExtension("http://dsf.dev/fhir/StructureDefinition/extension-read-access-organization",
+						new Identifier().setSystem("http://dsf.dev/sid/organization-identifier")
+								.setValue("organization.com"));
 		org.addIdentifier().setSystem("http://dsf.dev/sid/organization-identifier").setValue("test.org");
 		org.setActive(true);
 		org.addExtension().setUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint")
@@ -93,8 +150,7 @@ public class OrganizationProfileTest
 						"6d40e7c82ead96a9c5851976002d3732631d6e0e82e10e98c5ba568b2980b45a4436577d329ee47a8bc50fd35e39aa3c54faa23249d7b7a82a117824a4c430eb"));
 
 		ValidationResult result = resourceValidator.validate(org);
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::info);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertEquals(1, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
 				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
@@ -113,8 +169,7 @@ public class OrganizationProfileTest
 						"6d40e7c82ead96a9c5851976002d3732631d6e0e82e10e98c5ba568b2980b45a4436577d329ee47a8bc50fd35e39aa3c54faa23249d7b7a82a117824a4c430eb"));
 
 		ValidationResult result = resourceValidator.validate(org);
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::info);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertEquals(3, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
 				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
@@ -133,8 +188,7 @@ public class OrganizationProfileTest
 						"6d40e7c82ead96a9c5851976002d3732631d6e0e82e10e98c5ba568b2980b45a4436577d329ee47a8bc50fd35e39aa3c54faa23249d7b7a82a117824a4c430eb"));
 
 		ValidationResult result = resourceValidator.validate(org);
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::info);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertEquals(1, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
 				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
@@ -151,10 +205,9 @@ public class OrganizationProfileTest
 		org.addEndpoint().setReference("Endpoint/" + UUID.randomUUID().toString());
 
 		ValidationResult result = resourceValidator.validate(org);
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::info);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
-		assertEquals(1, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
+		assertEquals(2, result.getMessages().stream().filter(m -> ResultSeverityEnum.ERROR.equals(m.getSeverity())
 				|| ResultSeverityEnum.FATAL.equals(m.getSeverity())).count());
 	}
 }
