@@ -1,3 +1,18 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.client;
 
 import java.io.IOException;
@@ -5,8 +20,8 @@ import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyStore;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -174,7 +189,7 @@ public class WebsocketClientTyrus implements WebsocketClient
 			@Override
 			public void beforeRequest(Map<String, java.util.List<String>> headers)
 			{
-				headers.put(HttpHeaders.USER_AGENT, Collections.singletonList(userAgentValue));
+				headers.put(HttpHeaders.USER_AGENT, List.of(userAgentValue));
 			}
 		};
 		return ClientEndpointConfig.Builder.create().configurator(configurator).build();
@@ -189,8 +204,11 @@ public class WebsocketClientTyrus implements WebsocketClient
 		logger.debug("Closing websocket {}", wsUri);
 		try
 		{
-			connection.close();
-			connection = null;
+			if (connection != null)
+			{
+				connection.close();
+				connection = null;
+			}
 		}
 		catch (IOException e)
 		{
